# pyproject-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Lesson08.ipynb  Makefile  README.md  changelog.md  demo_api_from_notebook.ipynb  demo_from_cli.py  nohup.out  pyproject.toml  readme.md  requirements-local.txt  requirements.txt  run_api.py  run_from_cli.py  run_from_notebook.ipynb  setup.sh  tracks.csv
'http:§§google.com'/: readme.md
'http:§§google.it'/: readme.md
.github/workflows/: makefile.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
https:§§cloud.google.com§docs/: readme.md
lib/: .gitignore
lib/configs/: config.py
lib/exceptions/: some_exception.py
lib/factories/: a_factory.py  factory_provider.py
lib/models/: readme_md.py  section.py
lib/processors/: create_section_processor.py  help_processor.py
lib/repository/: persist_fs.py
lib/tests/: .gitignore  conftest.py  test_a_factory.py  test_create_section_processor.py  test_factory_provider.py  test_help_processor.py  test_main.py  test_persist_fs.py  test_readme_md.py  test_section.py  test_validator.py
lib/tests/mocke/: persist_fs.py
lib/validator/: validator.py
pyproject-template/: .gitignore  main.py  map.yaml
pyproject-template/configs/: config.py
pyproject-template/exceptions/: section_value_error.py  some_exception.py
pyproject-template/factories/: a_factory.py  factory_provider.py
pyproject-template/http:§§www.github.com/: readme.md
pyproject-template/models/: readme_md.py  section.py
pyproject-template/processors/: create_section_processor.py  help_processor.py
(+19 files in other folders)
