[tool.poetry]
name = "pyproject"
version = "0.0.1"
description = "pyproject"
authors = ["obar1 <obar1@pm.me>"]

[tool.poetry.dependencies]
python = "~3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pre-commit = "^2.11.1"
black = "^20.8b1"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
